# bpt

./: Cargo.toml  README.md  build.rs
assets/default-configs/: bpt.conf  make.common  make.conf
contrib/completion/: _bpt  bpt.bash  bpt.fish
contrib/util/: bpt2tar.sh
doc/: concepts.md
doc/man/: bpt.1  bpt.1.scd  bpt.conf.5  bpt.conf.5.scd
src/: cli.rs  color.rs  constant.rs  error.rs  main.rs  testutil.rs
src/collection/: available_bpts.rs  cache.rs  installed_pkgs.rs  mod.rs  pkg_files.rs  repository_pkgs.rs
src/command/: apply.rs  build.rs  check.rs  clean.rs  downgrade.rs  fetch.rs  files.rs  info.rs  install.rs  list.rs  make_repo.rs  mod.rs  provides.rs  remove.rs  search.rs  sign.rs  sync.rs  upgrade.rs  verify.rs
src/file/: bbuild.rs  bpt.rs  bpt_conf.rs  fileidx.rs  instpkg.rs  make_common.rs  make_conf.rs  mod.rs  pkgidx.rs  privkey.rs  pubkeys.rs  repos.rs  sig.rs  tmpdir.rs  world.rs
src/io/: bounded_file.rs  compressed_tarball.rs  compression.rs  confirm.rs  dir_aux.rs  file_aux.rs  mod.rs  netutil.rs  path_aux.rs  query_credentials.rs  read_small.rs  shell.rs
src/location/: bbuild_path.rs  bbuild_path_url_repo.rs  bbuild_repo.rs  bbuild_url.rs  bpt_path.rs  bpt_path_url_repo.rs  bpt_repo.rs  bpt_url.rs  idx.rs  idx_path.rs  idx_path_url.rs  idx_url.rs  mod.rs  pkg.rs  pkg_path.rs  pkg_path_url.rs  pkg_path_url_repo.rs  pkg_url.rs  root_dir.rs  url.rs
src/marshalling/: block.rs  field.rs  field_list.rs  field_str.rs  magic_number.rs  mod.rs
src/metadata/: arch.rs  backup.rs  depend.rs  depends.rs  dir.rs  filename.rs  filepath.rs  gid.rs  homepage.rs  instfile.rs  instpkgkey.rs  license.rs  makearchs.rs  makebin.rs  makebins.rs  makedepends.rs  mod.rs  mode.rs  partid.rs  pkgdesc.rs  pkgid.rs  pkginfo.rs  pkgkey.rs  pkgname.rs  pkgsrc.rs  pkgver.rs  regfile.rs  repopath.rs  subdir.rs  symlink.rs  timestamp.rs  uid.rs  versionreq.rs
src/reconcile/: bpt_rec.rs  build_order.rs  fileidx_rec.rs  idx_rec.rs  mod.rs  pkgidx_rec.rs  traits.rs
src/str/: base64.rs  mod.rs  pathbuf.rs  (+4 more)
tests/: README  main.rs
(+55 files in other folders)
